# Jubjub

./: .gitignore  CMakeLists.txt  README.md
cmake/: bls.cmake
include/elgamal/: cipher.h
include/field/: constant.h  fr.h
include/group/: affine.h  affine_niels.h  completed.h  constant.h  constants.h  extended.h  extended_niels.h  normalize.h
src/elgamal/: cipher.cpp
src/field/: fr.cpp
src/group/: affine.cpp  affine_niels.cpp  extended.cpp  extended_niels.cpp  normalize.cpp
test/: CMakeLists.txt  test_elgamal.cpp  test_fr.cpp  test_group.cpp
