CMAKE_MINIMUM_REQUIRED(VERSION 3.24)
PROJECT(Jubjub VERSION 0.0.1)
SET(CMAKE_CXX_STANDARD 20)

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake;${CMAKE_MODULE_PATH})
INCLUDE(Bls)
INCLUDE(Gtest)

ADD_SUBDIRECTORY(test)

FILE(GLOB_RECURSE SOURCE_FILES src/*.cpp)
ADD_LIBRARY(
        Jubjub
        ${SOURCE_FILES}
)

TARGET_INCLUDE_DIRECTORIES(
        Jubjub
        PUBLIC ${PROJECT_SOURCE_DIR}/include
)

TARGET_LINK_LIBRARIES(
        Jubjub
        PUBLIC BLS12_381
)